# KaRadio32_4

./: CMakeLists.txt  README.md  generate.bat  generate.sh  partitions.csv  sdkconfig  sdkconfig.5
binaries/: i2s.c
boards/: acoveca.csv  lolin32pro.csv  lolin32prostvol.csv  new_psram.csv  obsidian_psram.csv
components/audio_player/: audio_player.c
components/audio_player/include/: audio_player.h
components/audio_renderer/: CMakeLists.txt  audio_renderer.c  audio_renderer.c.new  audio_renderer.c.old
components/audio_renderer/include/: audio_renderer.h
components/common/: common_buffer.c
components/fdk-aac-oreo-m8/: CMakeLists.txt
components/fdk-aac_decoder/: CMakeLists.txt  fdk_aac_decoder.c
components/mad/: align.h  layer3.c
components/mp3_decoder/: CMakeLists.txt  mp3_decoder.c
components/u8g2/: CMakeLists.txt
components/u8g2/csrc/: u8g2_esp32_hal.c  u8x8_d_st7567.c
components/ucglib/csrc/: ucg_com_msg_api.c  ucg_dev_ic_st7735S.c  ucg_dev_ic_st7735W.c  ucg_dev_tft_128x128_ili9163.c  ucg_dev_tft_128x128_st7735.c  ucg_dev_tft_128x160_W_st7735.c  ucg_dev_tft_132x132_pcf8833.c
components/ucglib/tools/font/bdf/: win_helvR14_gr.bdf
components/wolfssl/: CMakeLists.txt
components/wolfssl/wolfcrypt/src/: random.c
components/wolfssl/wolfssl/wolfcrypt/port/Espressif/: esp32-crypt.h
components/xpt2046/: xpt2046.c
main/: CMakeLists.txt  ClickButtons.c  Kconfig.projbuild  addon.c  addonu8g2.c  addonucg.c  app_main.c  app_main.c.4  app_main4.c  app_main4.cold  app_main4.h  eeprom.c  gpio.c  interface.c  irnec.c  nouveau 1.txt  ota.c  servers.c  vs1053.c  webclient.c  webserver.c  websocket.c
main/include/: app_main.h  gpio.h  interface.h  telnet.h
webpage/: css-html-js-minify.py  favicon  generate.bat  index  index.html  logo  script  style  style1
