idf_component_register(SRCS
    "src/keys.c"
    "src/ssl.c"
    "src/sniffer.c"
    "src/crl.c"
    "src/ocsp.c"
    "src/wolfio.c"
    "src/tls.c"
    "src/internal.c"
    "src/tls13.c"
    "wolfcrypt/src/sha512.c"
    "wolfcrypt/src/rc2.c"
    "wolfcrypt/src/sp_armthumb.c"
    "wolfcrypt/src/error.c"
    "wolfcrypt/src/ge_low_mem.c"
    "wolfcrypt/src/blake2b.c"
    "wolfcrypt/src/sp_x86_64.c"
    "wolfcrypt/src/sp_c64.c"
    "wolfcrypt/src/cryptocb.c"
    "wolfcrypt/src/ecc.c"
    "wolfcrypt/src/curve448.c"
    "wolfcrypt/src/asm.c"
    "wolfcrypt/src/rabbit.c"
    "wolfcrypt/src/pwdbased.c"
    "wolfcrypt/src/pkcs7.c"
    "wolfcrypt/src/sp_int.c"
    "wolfcrypt/src/hash.c"
    "wolfcrypt/src/rsa.c"
    "wolfcrypt/src/pkcs12.c"
    "wolfcrypt/src/wc_port.c"
    "wolfcrypt/src/arc4.c"
    "wolfcrypt/src/srp.c"
    "wolfcrypt/src/coding.c"
    "wolfcrypt/src/sha256.c"
    "wolfcrypt/src/dh.c"
    "wolfcrypt/src/fe_operations.c"
    "wolfcrypt/src/chacha20_poly1305.c"
    "wolfcrypt/src/sp_arm32.c"
    "wolfcrypt/src/fe_448.c"
    "wolfcrypt/src/ecc_fp.c"
    "wolfcrypt/src/hmac.c"
    "wolfcrypt/src/cmac.c"
    "wolfcrypt/src/fe_low_mem.c"
    "wolfcrypt/src/memory.c"
    "wolfcrypt/src/idea.c"
    "wolfcrypt/src/blake2s.c"
    "wolfcrypt/src/sha3.c"
    "wolfcrypt/src/md4.c"
    "wolfcrypt/src/sha.c"
    "wolfcrypt/src/integer.c"
    "wolfcrypt/src/tfm.c"
    "wolfcrypt/src/curve25519.c"
    "wolfcrypt/src/md5.c"
    "wolfcrypt/src/sp_c32.c"
    "wolfcrypt/src/ge_operations.c"
    "wolfcrypt/src/wolfmath.c"
    "wolfcrypt/src/hc128.c"
    "wolfcrypt/src/ed25519.c"
    "wolfcrypt/src/aes.c"
    "wolfcrypt/src/sp_cortexm.c"
    "wolfcrypt/src/md2.c"
    "wolfcrypt/src/random.c"
    "wolfcrypt/src/sp_dsp32.c"
    "wolfcrypt/src/des3.c"
    "wolfcrypt/src/ge_448.c"
    "wolfcrypt/src/wc_dsp.c"
    "wolfcrypt/src/ripemd.c"
    "wolfcrypt/src/camellia.c"
    "wolfcrypt/src/sp_arm64.c"
    "wolfcrypt/src/wc_pkcs11.c"
    "wolfcrypt/src/compress.c"
    "wolfcrypt/src/poly1305.c"
    "wolfcrypt/src/signature.c"
    "wolfcrypt/src/chacha.c"
    "wolfcrypt/src/ed448.c"
    "wolfcrypt/src/wc_encrypt.c"
    "wolfcrypt/src/cpuid.c"
    "wolfcrypt/src/asn.c"
    "wolfcrypt/src/logging.c"
    "wolfcrypt/src/wolfevent.c"
    "wolfcrypt/src/dsa.c"
    "wolfcrypt/src/port/Espressif/esp32_util.c"
    "wolfcrypt/src/port/Espressif/esp32_aes.c"
    "wolfcrypt/src/port/Espressif/esp32_mp.c"
    "wolfcrypt/src/port/Espressif/esp32_sha.c"
    "wolfcrypt/src/port/atmel/atmel.c"
                    INCLUDE_DIRS 
	"include/"
	"."
					)
component_compile_options(-Wno-error=unused-label -Wno-error=return-type -Wno-error=missing-braces 
-Wno-error=pointer-sign -Wno-error=parentheses -Wno-error=maybe-uninitialized -DWOLFSSL_USER_SETTINGS -DWOLFSSL_STATIC_RSA )
